--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
 
     <style>
         [id] {
-            scroll-margin-top: 105px;
+            scroll-margin-top: 104px;
         }
     </style>
 </head>
@@ -32,7 +32,7 @@
 
     <header class="bg-[url('Logo/Gem_1y2kf71y2kf71y2k.png')]
   bg-center bg-cover bg-no-repeat sticky top-0 m-0 p-0 z-50">
-        <div class="max-w-7xl mx-auto flex justify-between items-center px-5 pt-5 pb-6">
+        <div class="max-w-7xl mx-auto flex justify-between items-center p-5">
             <!-- Brand -->
             <a href="portfolio.html" class="flex items-center">
                 <h1 class="text-2xl md:text-3xl xl:text-4xl font-bold">
@@ -931,5 +931,6 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="animate.js"></script>
 <script src="email.js"></script>
+
 
 </html>
