--- a/portfolio.html
+++ b/portfolio.html
@@ -215,7 +215,7 @@
 
                     </div>
                     <div
-                        class="w-1/2 md:w-1/4 flex flex-wrap justify-center items-center space-x-3 md:space-x-4 border-r-4 h-20 mt-2 md:mt-0 px-2">
+                        class="w-1/2 md:w-1/4 flex flex-wrap justify-center items-center space-x-3 md:space-x-4 border-r-3 sm:border-r-4 h-20 mt-2 md:mt-0 px-2">
 
                         <span class="text-3xl sm:text-4xl lg:text-5xl font-semibold">3+</span>
                         <span class="text-base sm:text-lg lg:text-xl font-medium">Backend<br />Technologies</span>
