--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,7 @@
                 <div class="w-full sm:w-1/2 flex items-center justify-center p-4 sm:p-8 ">
                     <div class="w-64 h-64 md:w-80 md:h-80 lg:w-96 lg:h-96 border-2 sm:border-4 border-cyan-400 rounded-4xl my-6 sm:my-8 shadow-[0_0_25px_0px_#007bff] overflow-hidden"
                         id="introProfile">
-                        <img src="Logo/1704388595131.jpg"
+                        <img src="Logo/WhatsApp Image 2025-10-04 at 11.38.00 AM.jpeg"
                             class="w-full h-full object-contain hover:object-full transition" alt="Profile Image" />
                     </div>
                 </div>
@@ -262,7 +262,7 @@
                 <div class="w-full sm:w-1/2 flex items-center justify-center p-4 sm:p-8" id="aboutProfile">
                     <div
                         class="w-64 h-64 md:w-80 md:h-80 lg:w-96 lg:h-96 border-2 sm:border-4 border-cyan-400 rounded-4xl my-2 sm:my-4 shadow-[0_0_25px_0px_#007bff] overflow-hidden">
-                        <img src="Logo/1704388595131.jpg" class="w-full h-full object-contain" alt="Profile Image" />
+                        <img src="Logo/WhatsApp Image 2025-10-04 at 11.38.00 AM.jpeg" class="w-full h-full object-contain" alt="Profile Image" />
                     </div>
                 </div>
             </div>
@@ -934,4 +934,5 @@
 
 
 </html>
+
 
