--- a/portfolio.html
+++ b/portfolio.html
@@ -246,7 +246,7 @@
                         <p class="text-base md:text-lg font-medium mt-3 text-cyan-400">Name : &nbsp; <span
                                 class="text-gray-100 font-normal"> Alok Maurya</span></p>
                         <p class="text-base md:text-lg font-medium mt-3 text-cyan-400">Email : &nbsp; <span
-                                class="text-gray-100 font-normal"> alok_pa2508mch17@iitp.ac.in</span></p>
+                                class="text-gray-100 font-normal"> alokmaurya2056776@gmail.com</span></p>
                         <p class="text-base md:text-lg font-medium mt-3 text-cyan-400">Phone : &nbsp; <span
                                 class="text-gray-100 font-normal"> +91 7084987238</span></p>
                         <p class="text-base md:text-lg font-medium mt-3 text-cyan-400">City : &nbsp; <span
@@ -412,7 +412,7 @@
                                 • Internet of Things (IOT) Using - C, C++
                             </p>
 
-                            <h2 class="text-lg font-semibold pb-4">May 2025</h2>
+                            <h2 class="text-lg font-semibold pb-4">2024</h2>
                             <h2 class="text-xl font-bold text-cyan-400 py-2">Coding Club</h2>
                             <p class="max-w-xl font-medium text-base tracking-wide leading-relaxed">
                                 • Frontend Development Using - React DOM
@@ -420,7 +420,7 @@
                             <p class="max-w-xl font-medium text-base tracking-wide leading-relaxed">
                                 • Backend Development Using - PHP & C# - ASP.NET
                             </p>
-                            <h2 class="text-base font-semibold text-cyan-400 pb-4">From : May 2025 - </h2>
+                            <h2 class="text-base font-semibold text-cyan-400 pb-4">From : May 2025 - October 2025</h2>
                         </div>
                         <div class="w-full border-t"></div>
                     </div>
@@ -604,7 +604,7 @@
 
                     </div>
                     <h3 class="text-lg lg:text-xl font-semibold text-center pb-2">Email Address</h3>
-                    <p class="text-cyan-400 text-lg font-semibold text-center py-2">alok_pa2508mch17@iitp.ac.in</p>
+                    <p class="text-cyan-400 text-lg font-semibold text-center py-2">alokmaurya2056776@gmail.com</p>
 
                 </div>
                 <div
@@ -903,7 +903,7 @@
                 </a>
 
                 <i class="fa-solid fa-envelope fa-lg hover:-translate-y-1 transition hover:text-cyan-400"></i>
-                <span class="ps-2">alok_pa2508mch17@iitp.ac.in</span>
+                <span class="ps-2">alokmaurya2056776@gmail.com</span>
                 <p class="my-3"></p>
                 <i class="fa-solid fa-phone fs-lg hover:-translate-y-1 transition hover:text-cyan-400"></i>
                 <span class="ps-2">+91 7084987238</span>
@@ -934,5 +934,6 @@
 
 
 </html>
+
 
 
