--- a/portfolio.html
+++ b/portfolio.html
@@ -412,7 +412,7 @@
                                 • Internet of Things (IOT) Using - C, C++
                             </p>
 
-                            <h2 class="text-lg font-semibold pb-4">2024</h2>
+                            <h2 class="text-lg font-semibold pb-4 text-cyan-400">May 2024</h2>
                             <h2 class="text-xl font-bold text-cyan-400 py-2">Coding Club</h2>
                             <p class="max-w-xl font-medium text-base tracking-wide leading-relaxed">
                                 • Frontend Development Using - React DOM
@@ -604,7 +604,7 @@
 
                     </div>
                     <h3 class="text-lg lg:text-xl font-semibold text-center pb-2">Email Address</h3>
-                    <p class="text-cyan-400 text-lg font-semibold text-center py-2">alokmaurya2056776@gmail.com</p>
+                    <p class="text-cyan-400 text-lg font-semibold text-center py-2">alokmaurya2056776@gmail.com </p>
 
                 </div>
                 <div
@@ -934,6 +934,7 @@
 
 
 </html>
+
 
 
 
