--- a/portfolio.html
+++ b/portfolio.html
@@ -418,7 +418,7 @@
                                 • Frontend Development Using - React DOM
                             </p>
                             <p class="max-w-xl font-medium text-base tracking-wide leading-relaxed">
-                                • Backend Development Using - PHP & C# - ASP.NET
+                                • Backend Development Using - PHP & C# - ASP.NET Core (MVC)
                             </p>
                             <h2 class="text-base font-semibold text-cyan-400 pb-4">From : May 2025 - October 2025</h2>
                         </div>
@@ -934,6 +934,7 @@
 
 
 </html>
+
 
 
 
