--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Alok Maurya | Portfolio</title>
     <meta name="description"
         content="Alok Maurya is a Full Stack Developer specializing in responsive Web & Mobile Applications using React and Tailwind CSS. Check out projects, portfolio, and contact info.">
 
@@ -933,6 +933,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="animate.js"></script>
 <script src="email.js"></script>
+
 
 
 </html>
