--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
 
                     </div>
                     <h3 class="text-lg lg:text-xl font-semibold text-center pb-2">Email Address</h3>
-                    <p class="text-cyan-400 text-lg font-semibold text-center py-2">alokmaurya2056776@gmail.com </p>
+                    <p class="text-cyan-400 text-lg font-semibold text-center py-2 pe-2">alokmaurya2056776@gmail.com </p>
 
                 </div>
                 <div
@@ -937,4 +937,5 @@
 
 
 </html>
+
 
