--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <!-- Brand -->
             <a href="./" class="flex items-center">
                 <h1 class="text-2xl md:text-3xl xl:text-4xl font-bold -mt-[4px]">
-                    Alok <span class="text-cyan-400">Yadav</span>
+                    Alok <span class="text-cyan-400">Maurya</span>
                 </h1>
             </a>
 
